<resources>
    <string name="app_name">SignUp</string>
    <string name="welcome">welcome</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="pw">pw</string>
    <string name="singup">singup</string>
    <string name="todo">TODO</string>
    <string name="title_activity_finish">finish_activity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
